--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   binder: ^0.4.0
   pretty_dio_logger: ^1.1.1
   dartz: ^0.10.1
+  internet_connection_checker: ^0.0.1+3
 
 dev_dependencies:
   flutter_test:
